--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cucumber-js --require-module ts-node/register --require 'src/**/*.ts' --format json:reports/report.json",
+    "test:ci": "cucumber-js --require-module ts-node/register --require 'src/**/*.ts' --format json:reports/report.json --retry 2",
     "report": "node generate-report.js",
     "test:report": "npm test && npm run report"
   },
