--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "cucumber-js --require-module ts-node/register --require 'src/**/*.ts' --format json:reports/report.json",
     "test:ci": "cucumber-js --require-module ts-node/register --require 'src/**/*.ts' --format json:reports/report.json --retry 2",
     "report": "node generate-report.js",
-    "test:report": "npm test && npm run report"
+    "test:report": "npm test && npm run report",
+    "test:report:ci": "npm run test:ci && npm run report"
   },
   "repository": {
     "type": "git",
