--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@cucumber/cucumber": "^12.2.0",
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.10.1",
+    "multiple-cucumber-html-reporter": "^3.9.3",
     "playwright": "^1.56.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
